# Project_HW_3

./: CMakeLists.txt  Classifier.cpp  FeatureExtract.cpp  FeatureExtractor.h  ImageProcessor.cpp  ImageProcessor.h  KNNClassifier.cpp  KNNClassifier.h  ObjectDatabase.cpp  Segmentation.cpp  Segmentation.h  TaskRunner.cpp  TaskRunner.h  labeler.cpp  labeler.h  main.cpp  readme.md  text.txt  ~$5330 Project3.docx
Report_Folder/task_3/img1p3_ 75/: task3_report.txt
Report_Folder/task_3/img2p3_ 75/: task3_report.txt
Report_Folder/task_3/img5p3_ 75/: task3_report.txt
Report_Folder/task_4/: img1p3_5_feature_report.txt  img2p3_5_feature_report.txt  img4p3_5_（without monofilter)feature_report.txt  img5p3_5_feature_report.txt
Report_Folder/task_5/: db.txt  objectDB.txt
Report_Folder/task_5/Task_5_objectDB_copy/: objectDB.txt
Report_Folder/task_6/: data_analyzation.txt
project_setup_initilization/: procedure_setup.txt
